# rankthebot

./: .gitignore  LLM_VISIBILITY_TRACKER.md  README.md  pyproject.toml
llmvis/: config.py  main.py
llmvis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
llmvis/cli/: auth.py  report.py  scan.py
llmvis/core/: parser.py  reporter.py  scorer.py
llmvis/core/llms/: openai.py
llmvis/db/: store.py
rankthebot/: config.py  main.py
rankthebot/cli/: auth.py  queries.py  report.py  scan.py
rankthebot/core/: expander.py  parser.py  reporter.py  scan_runner.py
rankthebot/core/llms/: anthropic.py  openai.py
rankthebot/db/: models.py  store.py
tests/: test_core.py  test_integration.py
